syntax = "proto3";

package flickrphotosearch;

option go_package = "apis";

message PhotoSearchRequest {
    string query = 1;
    int32 page = 2;
}

message PhotoSearchResponse {
    message Photo {
        string ID = 1;
        string thumbnailUrl = 2;
        string mediumUrl = 3;
        string largeUrl = 4;
        string owner = 5;
        string title = 6;
    }

    int32 pageCount = 1;
    string total = 2;
    repeated Photo photos = 3;
}

// The Photo service definition.
service Photo {
    // Search photos
    rpc Search (PhotoSearchRequest) returns (PhotoSearchResponse) {}
}
